update backend for cafe status
